Show new version indicator Fix review status issue when collapse then expand the parent folder.

--- a/src/css/content.css
+++ b/src/css/content.css
@@ -115,6 +115,10 @@
 	font-size: 16px;
 }
 
+#diffTreeContainer #newVersionIndicator span.aui-icon:before {
+	font-size: 14px;
+}
+
 #compare {
 	/* tab-size: 4; */
 }
